itinerary showing up properly, linking pbetween itinerary and trips is working, deleteItinerary and deleteTrip are both working

--- a/frontent-clicktrip/src/index.css
+++ b/frontent-clicktrip/src/index.css
@@ -44,3 +44,8 @@ div.inactive-trip {
 div.active-trip {
   background-color: green;
 }
+
+div.trip-details {
+  z-index: 100;
+  background-color: grey;
+}
