edit itinerary basic css complete

--- a/frontent-clicktrip/src/index.css
+++ b/frontent-clicktrip/src/index.css
@@ -280,6 +280,7 @@ div.itinerary-col {
 
 div.itinerary-col > p {
   font-size: large;
+  align-self: center;
 }
 
 /* TRIPS CONTAINER ///////////////////////////////////////////// */
