further css and reduced example prices

--- a/frontent-clicktrip/src/index.css
+++ b/frontent-clicktrip/src/index.css
@@ -328,7 +328,7 @@ div.inactive-trip {
 }
 
 div.active-trip {
-  background-color: green;
+  background-color: #478CC1;
   color: black;
   padding-left: 3px;
 }
