--- a/frontent-clicktrip/src/index.css
+++ b/frontent-clicktrip/src/index.css
@@ -74,7 +74,7 @@ button.link:hover {
 }
 
 /* VIEW CONTAINER ////////////////////////////////////////////////////////////////////// */
-div.view {
+.view {
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -332,3 +332,90 @@ div.active-trip {
   color: black;
   padding-left: 3px;
 }
+
+
+/* CALENDAR ///////////////////////////////////////////// */
+div.price-calendar-view {
+  background-color: #f2f2f2;
+  background-image: none;
+}
+
+.price-calendar {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+
+.calendar {
+  display: flex;
+  flex-direction: column;
+  height: 70%;
+  width: 70%;
+  align-self: center;
+  justify-content: space-between;
+}
+
+.y-row {
+  display: flex;
+  flex-direction: row;
+  height: 32%;
+  justify-content: space-between;
+}
+
+.y-col {
+  border: 3px solid #478CC1;
+  border-radius: 6px;
+  width: 23%;
+  margin-right: 3px;
+  margin-bottom: 3px;
+  background-color: #478CC1;
+}
+
+.month {
+  font-size: small;
+  display: flex;
+  flex-direction: column;
+  background-color:#98C9E0;
+  height: 100%;
+  justify-content: space-around;
+  align-content: flex-start;
+  padding: 2px;
+  border-radius: 6px;
+  margin-left: 3px;
+  margin-right: -6px;
+  margin-top: 3px;
+  margin-bottom: -6px;
+}
+
+.y-col:hover {
+  background-color: green;
+  border-color: green;
+}
+
+.month:hover {
+  background-color: #82BC83;
+}
+
+.month:hover > .month-title {
+  background-color: green;
+  color: #f2f2f2;
+  font-weight: bolder;
+}
+
+.avg {
+  display: flex;
+  justify-content: space-between;
+}
+
+.month-title {
+  font-size: medium;
+  text-align: center;
+  width: 100%;
+  background-color: #478CC1;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  justify-self: flex-start;
+}
+
